--- a/about.html
+++ b/about.html
@@ -372,7 +372,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; 2020 <strong><span>ENGLISH CLUB</span></strong>. All Rights Reserved
+        &copy; 2020 <strong><span>ENGLISH PLUS</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
