--- a/portfolio.html
+++ b/portfolio.html
@@ -91,10 +91,10 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portolio</h2>
+          <h2>Gallery</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Portolio</li>
+            <li>Gallery</li>
           </ol>
         </div>
 
@@ -314,7 +314,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; 2020 <strong><span>ENGLISH CLUB</span></strong>. All Rights Reserved
+        &copy; 2020 <strong><span>ENGLISH PLUS</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
