--- a/index.html
+++ b/index.html
@@ -604,6 +604,11 @@
   </footer><!-- End Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
+        
+        <div class="whatsapp">
+    <a href="https://wa.me/917736787855" target="_blank">    
+    <h5><i class="bx bxl-whatsapp" aria-hidden="true"></i></h5></a>
+    </div>  
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/jquery/jquery.min.js"></script>
