--- a/team.html
+++ b/team.html
@@ -124,7 +124,7 @@
             <div class="member d-flex align-items-start">
               <div class="pic"><img src="assets/img/team/JAMSHI.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
-                <h4>JAMSHI</h4>
+                <h4>JAMSHEED</h4>
                 <span>Managing Director</span>
                 <!-- <p>Explicabo voluptatem mollitia et repellat</p>
                 <div class="social">
