--- a/about.html
+++ b/about.html
@@ -229,7 +229,7 @@
 
         <div class="section-title">
           <h2>Learn</h2>
-          <p>How will English Cafe help in making you experts?</p>
+          <p>How will English Plus help in making you experts?</p>
         </div>
 
         <div class="row">
