--- a/team.html
+++ b/team.html
@@ -117,7 +117,7 @@
             <div class="col-lg-6">
               <h3 style="color: royalblue;">OUR FOUNDERS & TRAINERS</h3>
               <p style="color: rgb(5, 5, 5);">
-                English Plus is the result of two enthusiastic young men, Jamsheed and Shareek. Their passion to teach along with love for English language made English Cafe possible. The motto of English Plus is to fill the zest of learning English and make English language accessible for all sections of the society.</p>
+                English Plus is the result of two enthusiastic young men, Jamsheed and Shareek. Their passion to teach along with love for English language made English Plus possible. The motto of English Plus is to fill the zest of learning English and make English language accessible for all sections of the society.</p>
             </div>
 
           <div class="col-lg-6">
