--- a/team.html
+++ b/team.html
@@ -153,6 +153,17 @@
               </div>
             </div>
           </div>
+            
+             <div class="col-lg-6 mt-4">
+            <div class="member d-flex align-items-start">
+              <div class="pic"><img src="assets/img/team/pic.jpg" class="img-fluid" alt=""></div>
+              <div class="member-info">
+                <h4>FIJI</h4>
+                <span>Counsellor</span>
+                
+              </div>
+            </div>
+          </div>
 
           <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
