--- a/team.html
+++ b/team.html
@@ -239,7 +239,7 @@
               <div class="pic"><img src="assets/img/team/shuhaib.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>SHUHAIB</h4>
-                <span>Counsellor</span>
+                <span>Account manager</span>
               </div>
             </div>
           </div>
