--- a/team.html
+++ b/team.html
@@ -227,7 +227,7 @@
            
             <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/anna tom.JPG" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/anna tom.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>ANNA TOM</h4>
                 <span>Language trainer</span>
@@ -237,7 +237,7 @@
             
             <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/nihala nizam.JPG" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/nihala nizam.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>NIHALA NIZAM</h4>
                 <span>Language trainer</span>
