--- a/team.html
+++ b/team.html
@@ -120,22 +120,7 @@
                 English Plus is the result of two enthusiastic young men, Jamsheed and Shareek. Their passion to teach along with love for English language made English Plus possible. The motto of English Plus is to fill the zest of learning English and make English language accessible for all sections of the society.</p>
             </div>
 
-          <div class="col-lg-6">
-            <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/JAMSHI.jpg" class="img-fluid" alt=""></div>
-              <div class="member-info">
-                <h4>JAMSHEED</h4>
-                <span>Managing Director</span>
-                <!-- <p>Explicabo voluptatem mollitia et repellat</p>
-                <div class="social">
-                  <a href=""><i class="ri-twitter-fill"></i></a>
-                  <a href=""><i class="ri-facebook-fill"></i></a>
-                  <a href=""><i class="ri-instagram-fill"></i></a>
-                  <a href=""> <i class="ri-linkedin-box-fill"></i> </a>
-                </div> -->
-              </div>
-            </div>
-          </div>
+         
 
           <div class="col-lg-6 mt-4 mt-lg-0">
             <div class="member d-flex align-items-start">
@@ -156,7 +141,7 @@
             
              <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/jamsheed.JPG" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/jamsheed.jpg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>JAMSHEED KUMMALI</h4>
                 <span>Managing Director</span>
