--- a/contact.html
+++ b/contact.html
@@ -150,7 +150,7 @@
                   <div class="validate"></div>
                 </div>
                 <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email" required />
+                  <input type="tel" class="form-control" name="email" id="email" placeholder="Your Phone Number" data-rule="email" data-msg="Please enter a valid email" required />
                   <div class="validate"></div>
                 </div>
               </div>
