--- a/team.html
+++ b/team.html
@@ -291,7 +291,7 @@
              
             <div class="col-lg-6 mt-4">
             <div class="member d-flex align-items-start">
-              <div class="pic"><img src="assets/img/team/new4.JPEG" class="img-fluid" alt=""></div>
+              <div class="pic"><img src="assets/img/team/new4.jpeg" class="img-fluid" alt=""></div>
               <div class="member-info">
                 <h4>MUHAMMED AMAN</h4>
                 <span>Counsellor</span>
