--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@ src="https://www.facebook.com/tr?id=531012714974840&ev=PageView&noscript=1"
 />
   </noscript>
   
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-367548629"></script> <script> window.dataLayer = window.dataLayer || []; function gtag(){dataLayer.push(arguments);} gtag('js', new Date()); gtag('config', 'AW-367548629'); </script>
+  
 </head>
 
 <body>
