--- a/index.html
+++ b/index.html
@@ -569,6 +569,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <br><br>
                 <strong>Phone:</strong> <a href="tel:+91 8606569342">+91 8606569342</a><br>
                 <strong>Email:</strong>englishplusofl@gmail.com<br>
+                <strong>Phone:</strong> <a href="PrivacyPolicy.html">Privacy Policy</a><br>
+                <strong>Phone:</strong> <a href="termsandconditions.html">Terms and Conditions</a><br>
               </p>
               <div class="social-links mt-3">
                 <a href="https://www.youtube.com/channel/UCqadaKEBmawLhehD5_20J7A" class="twitter"><i class="bx bxl-youtube"></i></a>
