--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -109,10 +109,10 @@ src="https://www.facebook.com/tr?id=531012714974840&ev=PageView&noscript=1"
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Privacy Policy</h2>
+          <h2>Terms and Conditions</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>Privacy Policy</li>
+            <li>Terms and Conditions</li>
           </ol>
         </div>
 
