--- a/contact.html
+++ b/contact.html
@@ -182,7 +182,7 @@ src="https://www.facebook.com/tr?id=531012714974840&ev=PageView&noscript=1"
                 <div class="sent-message">Your message has been sent. Thank you!</div>
               </div> -->
 
-              <p> By Clicking I Give My Consent To Receive Messages/Email And Updates To My Number Or Email Id</p><input type="checkbox" required/>
+              <p> By registering I accept the Terms and conditions and privacy policy of the website and give my consent to send me updates via Messages/Email.</p><input type="checkbox" required/>
               <div class="text-center"><button class="btn btn-danger" type="submit">Send Message</button></div>
             </form>
         
